--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,8 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
+apply plugin: 'com.google.gms.google-services'
+
 android {
     compileSdkVersion 25
     buildToolsVersion "25.0.3"
@@ -35,6 +37,7 @@ dependencies {
     compile "com.squareup.retrofit2:retrofit:2.1.0"
     compile "com.squareup.retrofit2:converter-moshi:2.1.0"
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
+    compile 'com.google.firebase:firebase-core:10.2.6'
 
     // RxJava & RxAndroid
     compile 'io.reactivex:rxjava:1.1.3'
