--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,7 @@ dependencies {
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
     compile 'com.google.firebase:firebase-core:10.2.6'
     compile 'com.miguelcatalan:materialsearchview:1.0.0'
+    compile 'com.github.faruktoptas:RetrofitRssConverterFactory:0.0.2'
 
     // RxJava & RxAndroid
     compile 'io.reactivex:rxjava:1.1.3'
